RESOLVED FIXED97435
JSArray::putByIndex asserts with readonly property on prototype
https://bugs.webkit.org/show_bug.cgi?id=97435
Summary JSArray::putByIndex asserts with readonly property on prototype
Gavin Barraclough
Reported 2012-09-24 01:01:23 PDT
Object.defineProperty(Array.prototype, 0, { writable: false }); [42].concat();
Attachments
the patch (6.84 KB, patch)
2012-09-24 17:00 PDT, Filip Pizlo
ggaren: review+
Gavin Barraclough
Comment 1 2012-09-24 02:11:39 PDT
<rdar://problem/12357084> [REGRESSION] JSArray::putByIndex asserts with readonly property on prototype
Filip Pizlo
Comment 2 2012-09-24 17:00:31 PDT
Created attachment 165469 [details] the patch
Geoffrey Garen
Comment 3 2012-09-24 17:04:58 PDT
Comment on attachment 165469 [details] the patch r=me
Filip Pizlo
Comment 4 2012-09-24 17:20:22 PDT
Note You need to log in before you can comment on or make changes to this bug.